# aoeui

./: CMakeLists.txt  LOG  README  all.h  aoeui.1.m4  bookmark.c  buffer.c  buffer.h  child.c  child.h  clip.c  clip.h  die.c  display.c  display.h  file.c  find.c  fold.c  help.c  help.m4  inline.h  keyword.c  locus.c  locus.h  macro.c  macro.h  main.c  mode.c  mode.h  search.c  tab.c  tags.c  text.c  text.h  undo.c  util.c  util.h  window.c  window.h
doc/: dependencies.md
help/: aoeui.help  asdfg.help
